--- a/index.html
+++ b/index.html
@@ -266,6 +266,8 @@
                     <li><img src="./images/icons/ubercart.svg" alt="ubercart img">Ubercart</li>
                     <li><img src="./images/icons/prestashop.svg" alt="prestashop img">PrestaShop</li>
                     <li><img src="./images/icons/virtuemart.svg" alt="virtuemart">Virtuemart</li>
+                    <li><img src="./images/icons/wordpress.svg" alt="wordpress">Wordpess</li>
+                    <li><img src="./images/icons/web-development.svg" alt="wordpress">Shopify</li>
                 </div>
             </div>
 
@@ -326,7 +328,7 @@
             </div>
             <div class="process">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_9" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512" xml:space="preserve" width="50px" height="50px"> <g id="prototype"> <g> <path d="M379.853,228.907c14.329,0,25.987-11.658,25.987-25.987V25.987C405.84,11.658,394.183,0,379.853,0h-88.467    C277.057,0,265.4,11.658,265.4,25.987v53.659c-2.303-0.153-4.657,0.642-6.418,2.403c-3.239,3.239-3.239,8.491,0,11.728    l12.382,12.382H246.6V25.987C246.6,11.658,234.943,0,220.613,0h-88.467c-14.329,0-25.987,11.658-25.987,25.987V202.92    c0,14.329,11.658,25.987,25.987,25.987h35.94v54.186h-35.94c-14.329,0-25.987,11.658-25.987,25.987v176.933    c0,14.329,11.658,25.987,25.987,25.987h88.467c14.329,0,25.987-11.658,25.987-25.987V309.08c0-14.329-11.658-25.987-25.987-25.987    h-35.94v-54.186h35.94c14.329,0,25.987-11.658,25.987-25.987v-80.173h24.763l-12.382,12.382c-3.239,3.239-3.239,8.491,0,11.728    c1.62,1.619,3.743,2.43,5.865,2.43c0.185,0,0.368-0.014,0.553-0.027v53.659c0,14.329,11.658,25.987,25.987,25.987h35.94v54.186    h-35.94c-14.329,0-25.987,11.658-25.987,25.987v176.933c0,14.329,11.658,25.987,25.987,25.987h88.467    c14.329,0,25.987-11.658,25.987-25.987V309.08c0-14.329-11.658-25.987-25.987-25.987h-35.94v-54.186H379.853z M220.613,299.68    c5.183,0,9.4,4.216,9.4,9.4v176.933c0,5.183-4.217,9.4-9.4,9.4h-88.467c-5.183,0-9.4-4.217-9.4-9.4V309.08    c0-5.183,4.216-9.4,9.4-9.4h35.94v33.609l-12.381-12.382c-3.24-3.239-8.491-3.239-11.73,0s-3.239,8.491,0,11.728l26.54,26.54    c0.011,0.011,0.023,0.02,0.033,0.03c0.184,0.181,0.375,0.355,0.575,0.52c0.093,0.076,0.191,0.143,0.286,0.215    c0.122,0.091,0.24,0.185,0.367,0.27c0.113,0.075,0.23,0.141,0.346,0.21c0.116,0.07,0.23,0.143,0.349,0.207    c0.118,0.063,0.241,0.117,0.363,0.175c0.124,0.059,0.245,0.121,0.373,0.172c0.118,0.049,0.24,0.088,0.361,0.132    c0.135,0.049,0.268,0.1,0.405,0.142c0.122,0.036,0.244,0.063,0.367,0.094c0.139,0.035,0.278,0.074,0.419,0.103    c0.143,0.029,0.286,0.045,0.43,0.065c0.124,0.018,0.247,0.041,0.372,0.054c0.272,0.027,0.545,0.041,0.818,0.041    c0.273,0,0.546-0.014,0.818-0.041c0.126-0.012,0.248-0.035,0.372-0.054c0.144-0.021,0.288-0.038,0.43-0.065    c0.143-0.029,0.28-0.068,0.419-0.103c0.123-0.031,0.245-0.057,0.367-0.094c0.138-0.042,0.271-0.093,0.406-0.142    c0.12-0.043,0.241-0.083,0.359-0.132c0.127-0.053,0.25-0.115,0.374-0.174c0.121-0.057,0.243-0.111,0.362-0.174    c0.119-0.064,0.233-0.137,0.349-0.207c0.116-0.07,0.233-0.135,0.346-0.21c0.126-0.084,0.246-0.178,0.367-0.27    c0.095-0.072,0.193-0.138,0.286-0.214c0.2-0.164,0.391-0.337,0.575-0.52c0.011-0.011,0.023-0.02,0.033-0.03l26.54-26.54    c3.239-3.239,3.239-8.491,0-11.728c-3.24-3.239-8.491-3.239-11.73,0l-12.381,12.382V299.68H220.613z M176.38,123.853    c-5.183,0-9.4-4.217-9.4-9.4s4.217-9.4,9.4-9.4s9.4,4.216,9.4,9.4S181.563,123.853,176.38,123.853z M230.013,202.92    c0,5.183-4.217,9.4-9.4,9.4h-35.94v-73.244c7.667-2.59,13.739-8.662,16.329-16.329h29.01V202.92z M230.013,106.16h-29.01    c-3.47-10.273-13.193-17.693-24.622-17.693c-14.329,0-25.987,11.658-25.987,25.987c0,11.43,7.42,21.152,17.693,24.622v73.244    h-35.94c-5.183,0-9.4-4.217-9.4-9.4V25.987c0-5.183,4.216-9.4,9.4-9.4h88.467c5.183,0,9.4,4.217,9.4,9.4V106.16z M291.387,212.32    c-5.183,0-9.4-4.217-9.4-9.4v-67.337l15.265-15.265c3.239-3.239,3.239-8.491,0-11.728l-15.265-15.265V25.987    c0-5.183,4.216-9.4,9.4-9.4h88.467c5.183,0,9.4,4.217,9.4,9.4V202.92c0,5.183-4.216,9.4-9.4,9.4h-35.94v-73.244    c10.273-3.47,17.693-13.193,17.693-24.622c0-14.329-11.658-25.987-25.987-25.987c-14.329,0-25.987,11.658-25.987,25.987    c0,11.43,7.42,21.152,17.693,24.622v73.244H291.387z M379.853,299.68c5.183,0,9.4,4.216,9.4,9.4v176.933    c0,5.183-4.216,9.4-9.4,9.4h-88.467c-5.183,0-9.4-4.217-9.4-9.4V309.08c0-5.183,4.216-9.4,9.4-9.4h35.94v33.609l-12.381-12.382    c-3.24-3.239-8.491-3.239-11.729,0c-3.239,3.239-3.239,8.491,0,11.728l26.54,26.54c0.011,0.011,0.023,0.02,0.033,0.03    c0.184,0.181,0.375,0.355,0.575,0.52c0.093,0.076,0.191,0.143,0.286,0.215c0.122,0.091,0.24,0.185,0.367,0.27    c0.113,0.075,0.23,0.141,0.346,0.21c0.116,0.07,0.23,0.143,0.349,0.207c0.118,0.063,0.241,0.117,0.363,0.175    c0.124,0.059,0.245,0.121,0.373,0.172c0.118,0.049,0.24,0.088,0.361,0.132c0.135,0.049,0.268,0.1,0.405,0.142    c0.122,0.036,0.244,0.063,0.367,0.094c0.139,0.035,0.278,0.074,0.419,0.103c0.143,0.029,0.286,0.045,0.43,0.065    c0.124,0.018,0.247,0.041,0.372,0.054c0.272,0.027,0.545,0.041,0.818,0.041c0.273,0,0.546-0.014,0.818-0.041    c0.126-0.012,0.248-0.035,0.372-0.054c0.144-0.021,0.288-0.038,0.43-0.065c0.143-0.029,0.28-0.068,0.419-0.103    c0.123-0.031,0.245-0.057,0.367-0.094c0.138-0.042,0.271-0.093,0.406-0.142c0.121-0.043,0.241-0.083,0.359-0.132    c0.127-0.053,0.25-0.115,0.374-0.174c0.121-0.057,0.243-0.111,0.362-0.174c0.119-0.064,0.233-0.137,0.349-0.207    c0.116-0.07,0.233-0.135,0.346-0.21c0.126-0.084,0.245-0.178,0.367-0.27c0.095-0.072,0.193-0.138,0.286-0.214    c0.2-0.164,0.391-0.337,0.575-0.52c0.011-0.011,0.023-0.02,0.033-0.03l26.54-26.54c3.239-3.239,3.239-8.491,0-11.728    c-3.24-3.239-8.491-3.239-11.73,0l-12.381,12.382V299.68H379.853z M335.62,123.853c-5.183,0-9.4-4.217-9.4-9.4s4.217-9.4,9.4-9.4    s9.4,4.216,9.4,9.4S340.803,123.853,335.62,123.853z" fill="#dc2d3c"></path> </g> <g> <path d="M335.62,371.559c-14.329,0-25.987,11.658-25.987,25.987c0,14.329,11.658,25.987,25.987,25.987    c14.329,0,25.987-11.658,25.987-25.987C361.607,383.217,349.949,371.559,335.62,371.559z M335.62,406.946    c-5.183,0-9.4-4.216-9.4-9.4s4.217-9.4,9.4-9.4s9.4,4.217,9.4,9.4S340.803,406.946,335.62,406.946z" fill="#dc2d3c"></path> </g> <g> <path d="M176.38,371.559c-14.329,0-25.987,11.658-25.987,25.987c0,14.329,11.658,25.987,25.987,25.987    s25.987-11.658,25.987-25.987C202.367,383.217,190.71,371.559,176.38,371.559z M176.38,406.946c-5.183,0-9.4-4.216-9.4-9.4    s4.217-9.4,9.4-9.4s9.4,4.217,9.4,9.4S181.563,406.946,176.38,406.946z" fill="#dc2d3c"></path> </g> </g> </svg>
-               <h3>3.Ptototype</h3>
+               <h3>3.Prototype</h3>
                <p>After designing, you will get your prototype, which will be sent ahead for the development process for the product.</p>
             </div>
             <div class="process">
@@ -336,7 +338,7 @@
             </div>
             <div class="process">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_8" x="0px" y="0px" viewBox="0 0 480.089 480.089" style="enable-background:new 0 0 480.089 480.089" xml:space="preserve" width="50px" height="50px"> <g id="medal"> <path d="M471.1,4.224c-1.393-2.602-4.105-4.225-7.056-4.224h-112c-2.674,0-5.172,1.335-6.656,3.56L240.044,161.6L134.7,3.56     C133.216,1.335,130.718,0,128.044,0h-112c-4.418-0.001-8.001,3.581-8.001,7.999c0,1.581,0.468,3.126,1.345,4.441L120.044,178.4     V208c0,4.418,3.582,8,8,8h88v10.336c-69.439,13.255-114.985,80.291-101.73,149.73s80.291,114.985,149.73,101.73     c69.439-13.255,114.985-80.291,101.73-149.73c-9.842-51.562-50.168-91.887-101.73-101.73V216h88c4.418,0,8-3.582,8-8v-29.6     L470.7,12.44C472.339,9.985,472.493,6.827,471.1,4.224z M110.964,136h49.08v-16h-59.72L30.988,16h92.776L161.1,72h-57.056v16     h67.72l53.336,80h-92.8L110.964,136z M352.044,352c0,61.856-50.144,112-112,112s-112-50.144-112-112s50.144-112,112-112     C301.873,240.066,351.978,290.172,352.044,352z M232.044,224.408V216h16v8.408c-2.656-0.168-5.296-0.408-8-0.408     C237.34,224,234.7,224.24,232.044,224.408z M344.044,200h-208v-16h208V200z M379.764,120h-59.72v16H369.1l-21.336,32h-92.8     L308.3,88h67.744V72h-57.056l37.336-56h92.8L379.764,120z" fill="#0caec1"></path> <path d="M136.044,352c0,57.438,46.562,104,104,104s104-46.562,104-104s-46.562-104-104-104     C182.634,248.066,136.11,294.59,136.044,352z M328.044,352c0,48.601-39.399,88-88,88s-88-39.399-88-88c0-48.601,39.399-88,88-88     C288.621,264.057,327.987,303.423,328.044,352z" fill="#0caec1"></path> <path d="M64.044,224h-16c0,17.673-14.327,32-32,32v16c17.673,0,32,14.327,32,32h16c0-17.673,14.327-32,32-32v-16     C78.371,256,64.044,241.673,64.044,224z M56.044,277.496l-0.072-0.096c-3.528-5.272-8.056-9.8-13.328-13.328L42.548,264     c5.35-3.558,9.938-8.146,13.496-13.496c3.558,5.35,8.146,9.938,13.496,13.496C64.19,267.558,59.602,272.146,56.044,277.496z" fill="#0caec1"></path> <path d="M432.044,352h-16c0,17.673-14.327,32-32,32v16c17.673,0,32,14.327,32,32h16c0-17.673,14.327-32,32-32v-16     C446.371,384,432.044,369.673,432.044,352z M424.044,405.496l-0.072-0.096c-3.528-5.272-8.056-9.8-13.328-13.328L410.548,392     c5.35-3.558,9.938-8.146,13.496-13.496c3.558,5.35,8.146,9.938,13.496,13.496C432.19,395.558,427.602,400.146,424.044,405.496z" fill="#0caec1"></path> <polygon points="232.044,304 216.044,304 216.044,320 232.044,320 232.044,408 248.044,408 248.044,296 232.044,296    " fill="#0caec1"></polygon> </g> </svg>
-                <h3>5.Quality Addurance</h3>
+                <h3>5.Quality Assurance</h3>
                 <P>Hyperlink values quality and provides 100% bug free application with no compromisation in it.</P>
             </div>
             <div class="process">
@@ -355,7 +357,7 @@
     <!-- -----------------About us section -------------- -->
     <div class="aboutCtnr" id="about">
         <div class="mainAbout">
-            <strong>WHO WE ARE</strong><br>
+<!--             <strong>WHO WE ARE</strong><br> -->
             <h2>ABOUT US</h2>
             <strong>With a vision to transform business intelligence, RASS GROUPS is the fastest-growing global IT
                 services & solutions company.</strong><br><br>
@@ -363,7 +365,8 @@
                 transformation platforms, cloud and infrastructure transformation, AI/ML-based chatbots, data analytics,
                 tech skill assessment platforms, and more. </p><br><br>
                 <div class="btn-ctnr"><a href="#MSME" class="doc-btn">MSME certificate</a>
-                <a href="#MSME" class="doc-btn">MSME certificate</a></div>
+<!--                 <a href="#MSME" class="doc-btn">MSME certificate</a> -->
+                </div>
         </div>
         <div class="rightAbout">
             <div class="smallBox">
@@ -398,7 +401,7 @@
     </div>
 
     <div class="industriesServes" id="portfolio">
-        <h2>Industries We Serves</h2>
+        <h2>Industries We Serve</h2>
         <div class="servesCtnr scroller">
             <div class="serves">
                 <svg width="50px" height="50px" fill="#dc2e3d" enable-background="new 0 0 496 496" version="1.1"
@@ -449,7 +452,7 @@
                         </path>
                     </g>
                 </svg>
-                <b>Education $ e-learning</b>
+                <b>Education & e-learning</b>
             </div>
             <div class="serves">
                 <svg width="50px" height="50px" fill="#dc2d3c" xmlns="http://www.w3.org/2000/svg"
@@ -1188,16 +1191,11 @@
         <div class="footer">
             <footer>
                 <div class="legalDoc">
-                    <h2>Our Legal Documents</h2>
+                    <h2>Our Company Strength</h2>
                     <div class="docPic">
                         <div class="doc" id="MSME">
-                            <img src="./images/msme.jpg" alt="">
-                            <b>MSME Certificate</b>
+                           "RASS GROUPS epitomizes excellence in propelling digital growth, blending innovation and expertise seamlessly. Our dynamic approach transforms potential into prosperity, paving the way for unparalleled success."
                         </div>
-                        <div class="doc">
-                            <img src="./images/msme.jpg" alt="">
-                        </div>
-                    </div>
                 </div>
                 <div class="mainFooter">
                     <a href="#about">About Us</a>
@@ -1226,7 +1224,7 @@
     <div class="mainContactCtnr">
         <div class="contactMenu">
             <!-- ----------------call logo------------------ -->
-            <a href="https://wa.me/+918577869038"><svg width="49" height="49" viewBox="0 0 39 39" fill="none"
+            <a href="tel:+918577869038"><svg width="49" height="49" viewBox="0 0 39 39" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <circle style="fill: #1E88E5;
                 color: #1E88E5;" class="color-element" cx="19.4395" cy="19.4395" r="19.4395" fill="#03E78B"></circle>
