--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <header class="sm-head">
         <div class="logo">
             <img src="./images/logo.png" alt="logo">
-            <div class="estimate estH"><i class="fa-solid fa-paper-plane"></i> Request an Estimate</div>
+            <a href='https://wa.me/+918577869038' style='text-decoration:none;'class="estimate estH"><i class="fa-solid fa-paper-plane"></i> Request an Estimate</a>
             <i class="fa-solid fa-bars" id="menu" onclick="openMenu()"></i>
         </div>
     </header>
@@ -206,7 +206,7 @@
             <li class="sheprate">
                 <a href="mailto:support@rassgroups.com" class="mail-icon"><i class="fa-regular fa-envelope"></i></a>support@rassgroups.com
             </li>
-            <a href='https://wa.me/+91 85778 69038' class="estimate"><i class="fa-solid fa-paper-plane"></i> Request an Estimate
+            <a href='https://wa.me/+918577869038' style='text-decoration:none;' class="estimate"><i class="fa-solid fa-paper-plane"></i> Request an Estimate
             </a>
             <i class="fa-solid fa-xmark" id="close" onclick="closeMenu()"></i>
         </nav>
@@ -1006,7 +1006,7 @@
                     <li>No Hidden Charges</li>
                 </ul>
                 <div class="btnCtr">
-                    <a href='https://wa.me/+91 85778 69038' class="sm-btn">GET QUOTE NOW</a>
+                    <a href='https://wa.me/+918577869038' class="sm-btn">GET QUOTE NOW</a>
                 </div>
             </div>
 
@@ -1035,7 +1035,7 @@
                     <li>No Hidden Charges</li>
                 </ul>
                 <div class="btnCtr">
-                    <a href='https://wa.me/+91 85778 69038' class="sm-btn">GET QUOTE NOW</a>
+                    <a href='https://wa.me/+918577869038' class="sm-btn">GET QUOTE NOW</a>
                 </div>
             </div>
 
@@ -1064,7 +1064,7 @@
                     <li>No Hidden Charges</li>
                 </ul>
                 <div class="btnCtr">
-                    <a href='https://wa.me/+91 85778 69038' class="sm-btn">GET QUOTE NOW</a>
+                    <a href='https://wa.me/+918577869038' class="sm-btn">GET QUOTE NOW</a>
                 </div>
             </div>
         </div>
@@ -1095,7 +1095,7 @@
                     <li>No Hidden Charges</li>
                 </ul>
                 <div class="btnCtr">
-                    <a href='https://wa.me/+91 85778 69038' class="sm-btn">GET QUOTE NOW</a>
+                    <a href='https://wa.me/+918577869038' class="sm-btn">GET QUOTE NOW</a>
                 </div>
             </div>
 
@@ -1125,7 +1125,7 @@
                     <li>No Hidden Charges</li>
                 </ul>
                 <div class="btnCtr">
-                    <a href='https://wa.me/+91 85778 69038' style='color:white; text-decoration:none;' class="sm-btn">GET QUOTE NOW</a>
+                    <a href='https://wa.me/+918577869038' style='color:white; text-decoration:none;' class="sm-btn">GET QUOTE NOW</a>
                 </div>
             </div>
 
@@ -1156,7 +1156,7 @@
                     <li>No Hidden Charges</li>
                 </ul>
                 <div class="btnCtr">
-                    <a href='https://wa.me/+91 85778 69038' style='color:white; text-decoration:none;' class="sm-btn">GET QUOTE NOW</a>
+                    <a href='https://wa.me/+918577869038' style='color:white; text-decoration:none;' class="sm-btn">GET QUOTE NOW</a>
                 </div>
             </div>
         </div>
@@ -1189,7 +1189,7 @@
             <p>Mobile is in our nerves. We don’t just build apps, we create brand.<br>
                 Choosing us will be your best decision.</p>
 
-            <a href='https://wa.me/+91 85778 69038' style='color:white; text-decoration:none;' class="footerBtn">Get A Quote <img src="./images/icons/arrow-right-white.svg" alt=""></a>
+            <a href='https://wa.me/+918577869038' style='color:white; text-decoration:none;' class="footerBtn">Get A Quote <img src="./images/icons/arrow-right-white.svg" alt=""></a>
         </div>
         <div class="footer">
             <footer>
