--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Document</title>
+    <title>RASS GROUPS | Home</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel='icon' href='./images/logo.png'>
@@ -182,7 +182,7 @@
 <body>
     <header class="sm-head">
         <div class="logo">
-            <img src="./images/logo.png" alt="logo">
+            <img src="./images/logo.png" style=' background-color:black' alt="logo">
             <a href='https://wa.me/+918577869038' style='text-decoration:none;'class="estimate estH"><i class="fa-solid fa-paper-plane"></i> Request an Estimate</a>
             <i class="fa-solid fa-bars" id="menu" onclick="openMenu()"></i>
         </div>
